--- a/css/my_style.css
+++ b/css/my_style.css
@@ -3,16 +3,9 @@ body, h1, p, div{
 	font-family: 'KoHo', sans-serif;
 }
 
-/*
-a{
-	text-decoration: none;
-}
-*/
-
 /*JUMBOTRON*/
 #my-page-header{
 	margin-bottom: 0;
-	/*background: red;*/
 	background-image: linear-gradient(rgba(0,0,0,0.85), rgba(0,0,0,0.85)), url(../img/thisquietarmy.jpg);
 	background-size: cover;
 	background-position: center center;
@@ -20,7 +13,7 @@ a{
 	background-attachment: fixed;
 	color: #ffffff;
 	width: 100%;
-	/*min-height: 100vh;*/
+	min-height: 100vh;
 	display: flex;
 	align-items: center;
 }
@@ -32,6 +25,7 @@ a{
 
 #my-description{
 	font-size: 13px;
+	color: #9c9c9c;
 	text-transform: uppercase;
 }
 
@@ -52,9 +46,6 @@ a{
 .row .my-cover{
 	padding: 0;
 	height: 500px;
-	/*-webkit-background-size: 100%;
-	-moz-background-size: 100%;
-	background-size: 100% !important;*/
 	transition: all 0.3s ease-in-out;
 }
 
@@ -65,8 +56,8 @@ a{
 	background-repeat: no-repeat;
 }
 
-#thaw{
-	background: url(../img/thaw.jpg);
+#trys-saules{
+	background: url(../img/trys-saules.jpg);
 	background-size: cover;
 	background-position: center center;
 	background-repeat: no-repeat;
@@ -100,8 +91,8 @@ a{
 	background-repeat: no-repeat;
 }
 
-#trys-saules{
-	background: url(../img/trys-saules.jpg);
+#thaw{
+	background: url(../img/thaw.jpg);
 	background-size: cover;
 	background-position: center center;
 	background-repeat: no-repeat;
@@ -128,37 +119,11 @@ a{
 	background-repeat: no-repeat;
 }
 
-/*
-.my-covers a{
-	width: 100%;
-	height: 100%;
-}
-
-.row a:hover .info{
-	
-}
-
-.info{
-	width: 100%;
-	height: 100%;
-	opacity: 0;
-	background-color: rgba(237,20,91,0.95);
-	-webkit-transition: opacity 0.2s ease-in-out;
-	-moz-transition: opacity 0.2s ease-in-out;
-	transition: opacity 0.2s ease-in-out;
-	z-index: 3;
-}
-*/
-
 .row .my-review-link{
 	text-decoration: none;
 }
 
-
 .my-overlay{
-	/*background: #ffd400 center center;*/
-	/*background: #e3bd00 center center;*/
-	/*background: #d8c829 center center;*/
 	background: #ffc91e center center;
 	width: 100%;
 	height: 100%;
@@ -169,11 +134,8 @@ a{
 }
 
 .my-text{
-	/*position: relative;*/
 	height: 100%;
 	width: 100%;
-	/*padding-top: 20%;*/
-	/*padding-bottom: 20%;*/
 	padding-top: 120px;
 	padding-right: 30px;
 	padding-left: 30px;
@@ -187,7 +149,6 @@ a{
 .my-artist{
 	font-size: 20px;
 	color: #000000;
-	/*font-style: italic;*/
 	text-transform: uppercase;
 }
 
@@ -203,29 +164,70 @@ a{
 	transition: opacity 0.2s ease-in-out;
 }
 
-/*
-.my-cover:hover .my-review-link .my-overlay .my-text{
-	opacity: 1 !important;
-}
-*/
-
 #my-page-footer{
 	background: #000000;
 	margin-bottom: 0;
+	min-height: 300px;
 }
 
 #my-socials{
-	margin-bottom: 50px;
+	margin-bottom: 80px;
+	margin-top: 30px;
 }
 
-#my-socials img{
-	width: 30px;
-	margin: 20px;
-	
+#my-socials a{
+	text-decoration: none;
+	color: #ffffff;
+	margin-left: 50px;
+	margin-right: 50px;
+	text-transform: uppercase;
+	font-size: 14px;
+	position: relative;
 }
 
 #my-copy{
-	color: #ffffff;
+	color: #9c9c9c;
+	font-size: 12px;
+}
+
+#my-copy a{
+	text-decoration: none;
+	color: #ffd400;
+	position: relative;
+}
+
+#my-socials a:before,
+#my-copy a:before{
+	content: "";
+	position: absolute;
+	width: 100%;
+	height: 1px;
+	bottom: 0;
+	left: 0;
+	background-color: #ffd400;
+	visibility: hidden;
+	-webkit-transform: scaleX(0);
+	-moz-transform: scaleX(0);
+	transform: scaleX(0);
+	-webkit-transition: all 0.2s ease-in-out 0s;
+	-moz-transition: all 0.2s ease-in-out 0s;
+	transition: all 0.2s ease-in-out 0s;
+}
+
+#my-socials a:hover,
+#my-copy a:hover{
+	color: #ffd400;
+	-webkit-transition: all 0s ease-in-out;
+	-moz-transition: all 0s ease-in-out;
+	transition: all 0s ease-in-out;
+}
+
+#my-socials a:hover:before,
+#my-copy a:hover:before{
+	visibility: visible;
+	-webkit-transform: scaleX(1);
+	-moz-transform: scaleX(1);
+	transform: scaleX(1);
 }
 
 
