--- a/css/my_style.css
+++ b/css/my_style.css
@@ -24,7 +24,7 @@ body, h1, p, div{
 }
 
 #my-description{
-	font-size: 13px;
+	font-size: 12px;
 	color: #9c9c9c;
 	text-transform: uppercase;
 }
@@ -164,30 +164,40 @@ body, h1, p, div{
 	transition: opacity 0.2s ease-in-out;
 }
 
+/*FOOTER*/
 #my-page-footer{
 	background: #000000;
 	margin-bottom: 0;
 	min-height: 300px;
+	padding-top: 100px;
 }
 
 #my-socials{
-	margin-bottom: 80px;
-	margin-top: 30px;
+	/*margin-bottom: 80px;
+	margin-top: 30px;*/
+	margin: auto;
+	/*padding-left: 7rem;
+	padding-right: 7rem;*/
 }
 
 #my-socials a{
 	text-decoration: none;
 	color: #ffffff;
-	margin-left: 50px;
-	margin-right: 50px;
 	text-transform: uppercase;
 	font-size: 14px;
 	position: relative;
 }
 
+.row .my-social-colum{
+	padding: 0;
+	padding-top: 10px;
+	padding-bottom: 10px;
+}
+
 #my-copy{
 	color: #9c9c9c;
 	font-size: 12px;
+	margin-top: 100px;
 }
 
 #my-copy a{
@@ -229,6 +239,20 @@ body, h1, p, div{
 	-moz-transform: scaleX(1);
 	transform: scaleX(1);
 }
+
+/*MEDIA QUERIES*/
+@media (max-width: 800px){
+	#my-title{
+		font-size: 45px;
+	}
+}
+
+@media (max-width: 420px){
+	#my-title{
+		font-size: 30px;
+	}
+}
+
 
 
 
